--- a/style.css
+++ b/style.css
@@ -5,16 +5,39 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+@font-face {
+  font-family: "Frank Ruhl Reg";
+  src: url(./fonts/FrankRuhlLibre-Regular.ttf);
+}
+@font-face {
+  font-family: "Frank Ruhl Med";
+  src: url(./fonts/FrankRuhlLibre-Medium.ttf);
+}
+@font-face {
+  font-family: "Great Vibes";
+  src: url(./fonts/GreatVibes-Regular.ttf);
+}
+
 html {
   font-size: 62.5%;
+  --h1: calc(2rem + 1vw);
+  --h2: calc(3.5rem + 1vw);
+  --h3: calc(3rem + 1vw);
+  --h4: calc(2.4rem + 1vw);
+  --text: calc(1.5rem + 1vw);
+  --big: calc(2.4rem + 1vw);
+  --special-color: #906272;
+  --bg-color: #414141;
+  --gray-color: #525252;
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "", sans-serif;
 }
 
 h1 {
-  font-size: 2.6rem;
+  font-size: var(--h1);
 }
 
 li,
@@ -22,29 +45,33 @@ button,
 label,
 input,
 p {
-  font-size: 2rem;
+  font-size: var(--text);
 }
 
 h2 {
-  font-size: 4.8rem;
-  font-weight: 500;
+  font-size: var(--h2);
 }
 
 h3 {
-  font-size: 3rem;
-  font-weight: 400;
+  font-size: var(--h3);
 }
 
 h4,
 h5 {
-  font-size: 2.8rem;
+  font-size: var(--h4);
 }
 
 a {
-  color: white;
   text-decoration: none;
 }
 
-li {
+ul {
   list-style: none;
+}
+
+.flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
