first page complete. except plant animation

--- a/style.css
+++ b/style.css
@@ -7,15 +7,15 @@
 }
 
 @font-face {
-  font-family: "Frank Ruhl Reg";
+  font-family: "Ruhl";
   src: url(./fonts/FrankRuhlLibre-Regular.ttf);
 }
 @font-face {
-  font-family: "Frank Ruhl Med";
+  font-family: "Ruhl Med";
   src: url(./fonts/FrankRuhlLibre-Medium.ttf);
 }
 @font-face {
-  font-family: "Great Vibes";
+  font-family: "Vibes";
   src: url(./fonts/GreatVibes-Regular.ttf);
 }
 
@@ -44,7 +44,8 @@ li,
 button,
 label,
 input,
-p {
+p,
+a {
   font-size: var(--text);
 }
 
@@ -63,6 +64,7 @@ h5 {
 
 a {
   text-decoration: none;
+  color: black;
 }
 
 ul {
@@ -74,4 +76,84 @@ ul {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+body {
+  font-family: "Ruhl", sans-serif;
+}
+
+h1 {
+  font-family: "Vibes", sans-serif;
+}
+
+/* NAV SECTION */
+
+.main-head {
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+  /* How to fix weird Box SHadow Issues  */
+  z-index: 2;
+  position: relative;
+}
+nav {
+  width: 90%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  min-height: 10vh;
+  padding: 2rem 0rem;
+}
+#logo {
+  flex: 1 1 20rem;
+}
+.nav-links {
+  display: flex;
+  flex: 1 1 20rem;
+  justify-content: space-around;
+}
+
+/* HERO SECTION */
+
+.hero {
+  min-height: 90vh;
+  width: 95%;
+  margin: 0 0 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  overflow: hidden;
+}
+.hero-intro {
+  flex: 2 1 40rem;
+}
+.hero-intro p {
+  padding: 5rem 10rem;
+}
+.hero-intro h2 {
+  padding-top: 3rem;
+}
+.hero-intro a {
+  padding: 2rem 8rem;
+  border: 3px solid black;
+  margin-bottom: 4rem;
+}
+.hero-img {
+  flex: 1 1 40rem;
+  background: linear-gradient(#dad8dd, #dad1d4);
+  position: relative;
+  z-index: 1;
+}
+.hero-elena {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.plant {
+  bottom: 0;
+  left: -20%;
+  position: absolute;
+  z-index: -1;
+}
+.plant1 {
+}
+.plant2 {
+  left: 40%;
 }
