--- a/style.css
+++ b/style.css
@@ -187,3 +187,68 @@ nav {
     transform: rotateZ(0);
   }
 }
+@keyframes burger {
+}
+
+/* MEDIA QUERY */
+
+.burger,
+.burger-check {
+  display: none;
+}
+@media screen and (max-width: 842px) {
+  .burger {
+    position: relative;
+    display: block;
+  }
+  .burger span {
+    padding: 0.2rem 2rem;
+    background: var(--gray-color);
+    margin: 0.5rem 0rem;
+    display: block;
+    transition: all, 0.5s ease;
+  }
+  .nav-links {
+    background: var(--bg-color);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 100%;
+    flex-direction: column;
+    align-items: center;
+    transition: transform 1s ease;
+  }
+  .nav-links a {
+    color: white;
+    font-size: var(--h3);
+    text-decoration: underline;
+  }
+  .burger-check {
+    display: block;
+    width: 5rem;
+    height: 5rem;
+    position: absolute;
+    top: 50%;
+    right: 5%;
+    transform: translate(5%, -50%);
+    cursor: pointer;
+    opacity: 0;
+    z-index: 100;
+  }
+  .burger-check:checked + .nav-links {
+    transform: translate(-100%);
+  }
+  .burger-check:checked ~ .burger span {
+    background: white;
+  }
+  .burger-check:checked ~ .burger span:nth-child(1) {
+    transform: rotateZ(45deg) translateY(300%);
+  }
+  .burger-check:checked ~ .burger span:nth-child(2) {
+    opacity: 0;
+  }
+  .burger-check:checked ~ .burger span:nth-child(3) {
+    transform: rotateZ(-45deg) translateY(-300%);
+  }
+}
