--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ nav {
 }
 .hero-intro p {
   padding: 5rem 10rem;
+  color: var(--gray-color);
 }
 .hero-intro h2 {
   padding-top: 3rem;
@@ -135,6 +136,12 @@ nav {
   padding: 2rem 8rem;
   border: 3px solid black;
   margin-bottom: 4rem;
+}
+.hero-intro a:hover {
+  /* border: none; */
+  background: black;
+  color: white;
+  transition: all 0.3s;
 }
 .hero-img {
   flex: 1 1 40rem;
@@ -156,6 +163,7 @@ nav {
   animation: plant-entrance 1.5s ease-in-out 0.5s forwards,
     plant-shake 2.5s infinite ease alternate-reverse 2s;
   transform-origin: bottom;
+  max-height: 80vh;
 }
 .plant2 {
   left: 40%;
@@ -190,13 +198,64 @@ nav {
 @keyframes burger {
 }
 
-/* MEDIA QUERY */
-
 .burger,
 .burger-check {
   display: none;
 }
+
+/* ABOUT SECTION */
+
+.about {
+  min-height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+}
+.about-text {
+  flex: 2 1 40rem;
+  justify-content: space-around;
+  background: var(--bg-color);
+  color: white;
+}
+.about-image {
+  flex: 1 1 40rem;
+  position: relative;
+}
+.about-image h5 {
+  position: absolute;
+  letter-spacing: 2rem;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, 20%);
+}
+.about-image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.about-text .about-content {
+  padding: 3rem 8rem;
+}
+.about-text h3 {
+  padding: 2rem 0rem;
+  font-family: "Ruhl Med";
+}
+.about-text h2 {
+  font-family: "Vibes";
+  padding: 4rem;
+}
+
+/* MEDIA QUERY */
+
 @media screen and (max-width: 842px) {
+  /* Fixing Issues */
+  .hero {
+    width: 100%;
+  }
+  .hero-intro p {
+    padding: 5rem 3rem;
+  }
+
+  /* BURGER MENU */
   .burger {
     position: relative;
     display: block;
@@ -250,5 +309,10 @@ nav {
   }
   .burger-check:checked ~ .burger span:nth-child(3) {
     transform: rotateZ(-45deg) translateY(-300%);
+  }
+
+  /* ABOUT SECTION */
+  .about-text .about-content {
+    padding: 3rem 3rem;
   }
 }
