--- a/style.css
+++ b/style.css
@@ -244,6 +244,38 @@ nav {
   padding: 4rem;
 }
 
+/* GALLERY SECTION */
+
+.gallery {
+  display: grid;
+  min-height: 100vh;
+  grid-template-columns: repeat(3, 1fr);
+  position: relative;
+}
+.gallery-head {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  background: var(--bg-color);
+  padding: 5rem 10rem;
+  text-align: center;
+}
+.gallery img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: relative;
+}
+.gallery1 {
+  grid-column: 1/3;
+}
+.gallery2 {
+  grid-column: 3/4;
+  grid-row: 1/3;
+}
+
 /* MEDIA QUERY */
 
 @media screen and (max-width: 842px) {
@@ -314,5 +346,17 @@ nav {
   /* ABOUT SECTION */
   .about-text .about-content {
     padding: 3rem 3rem;
+  }
+
+  /* GALLERY SECTION */
+  .gallery {
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  }
+  .gallery-head {
+    display: none;
+  }
+  .gallery img {
+    grid-row: auto;
+    grid-column: auto;
   }
 }
