--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ html {
   --special-color: #906272;
   --bg-color: #414141;
   --gray-color: #525252;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -351,6 +352,7 @@ footer h4 {
   .burger {
     position: relative;
     display: block;
+    cursor: pointer;
   }
   .burger span {
     padding: 0.2rem 2rem;
@@ -375,34 +377,21 @@ footer h4 {
     font-size: var(--h3);
     text-decoration: underline;
   }
-  .burger-check {
-    display: block;
-    width: 5rem;
-    height: 5rem;
-    position: absolute;
-    top: 50%;
-    right: 5%;
-    transform: translate(5%, -50%);
-    cursor: pointer;
-    opacity: 0;
-    z-index: 100;
-  }
-  .burger-check:checked + .nav-links {
+
+  .nav-open {
     transform: translate(-100%);
   }
-  .burger-check:checked ~ .burger span {
+  .toggle .line1 {
+    transform: rotateZ(45deg) translateY(300%);
     background: white;
   }
-  .burger-check:checked ~ .burger span:nth-child(1) {
-    transform: rotateZ(45deg) translateY(300%);
-  }
-  .burger-check:checked ~ .burger span:nth-child(2) {
+  .toggle .line2 {
     opacity: 0;
   }
-  .burger-check:checked ~ .burger span:nth-child(3) {
+  .toggle .line3 {
+    background: white;
     transform: rotateZ(-45deg) translateY(-300%);
   }
-
   /* ABOUT SECTION */
   .about-text .about-content {
     padding: 3rem 3rem;
