--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ h1 {
 
 .main-head {
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
-  /* How to fix weird Box SHadow Issues  */
+  /* How to fix weird Box Shadow Issues  */
   z-index: 2;
   position: relative;
 }
